--- a/mailer-front/package.json
+++ b/mailer-front/package.json
@@ -9,7 +9,8 @@
     "formik": "^2.0.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-text-transition": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
