--- a/mailer-api/requirements.txt
+++ b/mailer-api/requirements.txt
@@ -6,7 +6,11 @@ h11==0.8.1
 httptools==0.0.13
 idna==2.8
 pydantic==1.2
+pylint==2.4.4
+pytest==5.3.1
 starlette==0.12.9
 uvicorn==0.10.8
 uvloop==0.14.0
 websockets==8.1
+pytest-watch==4.2.0
+requests==2.22.0
