--- a/development/docker-compose-dev.yml
+++ b/development/docker-compose-dev.yml
@@ -21,4 +21,4 @@ services:
       - "8080:8080"
     depends_on:
       - mailer-front
-    command: ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "8080"]
+    command: ["uvicorn", "api.src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8080"]
