--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,22 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
-    -   id: black
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: black
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.750
     hooks:
-    -   id: mypy
--   repo: https://gitlab.com/pycqa/flake8
-    rev: '3.7.9'
+      - id: mypy
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: "3.7.9"
     hooks:
-    -   id: flake8
+      - id: flake8
+  - repo: https://github.com/prettier/prettier
+    rev: "1.19.1"
+    hooks:
+      - id: prettier
