--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,24 @@ node_modules
 .mypy_cache
 
 env
+
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
