--- a/development/docker-compose-test.yml
+++ b/development/docker-compose-test.yml
@@ -16,7 +16,6 @@ services:
       context: ../
       dockerfile: ./development/mailer-api/Dockerfile
     volumes:
-      - '../mailer-api:/usr/src/app/'
-    ports:
-      - "8080:8080"
-    command: ["ptw"]
+      - '../mailer_api:/usr/src/app/'
+    working_dir: /usr/src/app/
+    command: ["python3.7", "-m", "pytest_watch"]
