--- a/development/docker-compose-dev.yml
+++ b/development/docker-compose-dev.yml
@@ -31,7 +31,7 @@ services:
       - "8080:8080"
     depends_on:
       - mailer-front
-    command: ["uvicorn", "api.src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8080", "--log-level", "debug"]
+    command: ["uvicorn", "api.src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8080"]
   redis:
     image: redislabs/rejson:latest
     ports:
